LCAM-259|Code clean up